reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_vec_nested_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithVecNested::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithVecNested"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithVecNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "std::vec::Vec",
                  "parameters": [
                    {
                      "name": "reflect_demo::tests::test_lib::TestStructNested"
                    }
                  ]
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::test_lib::TestStructNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      }
    ]
  }
]
