reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_vec_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithVec::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithVec"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithVec",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
