reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_vec_two.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithVecTwo>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i8",
        "description": "8-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithVecTwo",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          },
          {
            "name": "_f2",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "i8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i8",
        "description": "8-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithVecTwo",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "u8"
                }
              ]
            },
            "required": true
          },
          {
            "name": "_f2",
            "type": {
              "name": "std::vec::Vec",
              "parameters": [
                {
                  "name": "i8"
                }
              ]
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
